--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <style>
       html {
         size: 100%, 100%;
-        background-image: url(nav_bg.png);
+        background-color: #111;
       }
 
       body {
