--- a/src/index.html
+++ b/src/index.html
@@ -57,7 +57,7 @@
     <h class="header" style="font-family: button;"><u>G-Dem SMP</u></h>
     <a href="https://discord.gg/hpsw7YeXkg" style="background-color:#00ad2a;">Join Now!</a>
     <a href="rules.html" style="background-color:#a30000;">Rules</a>
-    <a href="http://g-dem_smp.apexmc.co:8123" style="background-color:#001b8f;">Map of Spawn</a>
+    <a href="http://g-dem_smp.apexmc.co:8123" style="background-color:#001b8f;">World Map</a>
     <!-- <a href="" style="background-color:#5f108b;">Player Ticks</a> -->
   </body>
 </html>
